--- a/source/webapp/templates/partial/simple_search.html
+++ b/source/webapp/templates/partial/simple_search.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<form class="text-center" action="" method="GET">
+    <label for="{{ form.search.id_for_label }}">{{ form.search.label }}:</label>
+    {{ form.search }}
+    <input type="submit" class="btn btn-dark" value="Search">
+    {% for error in form.search.errors %}
+        <p class="text-danger">{{ error }}</p>
+    {% endfor %}
+</form>
