--- a/source/webapp/templates/partial/pagination.html
+++ b/source/webapp/templates/partial/pagination.html
@@ -1,10 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
+<ul class="pagination">
+    {% if not page_obj.has_previous %}
+        <li class="page-item disabled">
+          <a class="page-link">Previous</a>
+        </li>
 
-</body>
-</html>
+
+    {% else %}
+        <li class="page-item">
+          <a class="page-link" href="?{% if query %}{{ query }}&{% endif %}page={{ page_obj.previous_page_number }}">Previous</a>
+        </li>
+
+        <li class="page-item">
+            <a class="page-link" href="?{% if query %}{{ query }}&{% endif %}page={{ page_obj.previous_page_number }}">
+                {{ page_obj.previous_page_number }}
+            </a>
+        </li>
+
+    {% endif %}
+
+
+    <li class="page-item active" aria-current="page">
+        {% if search %}<input type="hidden" name="search" value="{{ search }}">{% endif %}
+        <a class="page-link" href="#">{{ page_obj.number }}</a>
+    </li>
+
+
+
+    {% if not page_obj.has_next %}
+        <li class="page-item disabled">
+          <a class="page-link">Next</a>
+        </li>
+
+    {% else %}
+         <li class="page-item">
+              <a class="page-link" href="?{% if query %}{{ query }}&{% endif %}page={{ page_obj.next_page_number }}">
+                {{ page_obj.next_page_number }}
+              </a>
+         </li>
+
+
+        <li class="page-item">
+          <a class="page-link" href="?{% if query %}{{ query }}&{% endif %}page={{ page_obj.next_page_number }}">Next</a>
+        </li>
+
+    {% endif %}
+</ul>
+
+
+
+
+
+
+
