--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -1,11 +1,20 @@
 {% extends 'base.html' %}
 {% block menu %}
-<li class="nav-item">
-  <a class="nav-link active" href="{% url 'add' %}">Create</a>
-</li>
+
+    <li class="nav-item">
+        <a class="nav-link active" href="{% url 'add' %}">Create</a>
+    </li>
+
+    <li class="nav-item">
+        {% include 'partial/simple_search.html' %}
+    </li>
+
 {% endblock %}
+
 {% block content %}
+
     <h1 class="text-center" >Tracker List</h1><br/><hr>
+
     {% for tracker in trackers %}
         <h2>{{ tracker.short_description }}-({{ tracker.status }})</h2>
         <p>{% for t in tracker.type.all %}{{ t}}{% if not forloop.last %}, {% endif %}{% endfor %}</p>
@@ -13,6 +22,11 @@
         <h3><a href="{% url 'info' tracker.pk %}">More...</a></h3><br/>
         <hr>
     {% endfor %}
+
+    {% if is_paginated %}
+        {% include 'partial/pagination.html' %}
+    {% endif %}
+
 {% endblock %}
 
 
