--- a/source/webapp/templates/project/add.html
+++ b/source/webapp/templates/project/add.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
+<h1>Create Tracker</h1>
 
-</body>
-</html>
+<form action="" method="post">
+{% include 'partial/form.html'  with button_text='Create' %}
+</form>
+{% endblock %}
