--- a/source/webapp/templates/project/delete.html
+++ b/source/webapp/templates/project/delete.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %}Delete Project{% endblock %}
+{% block content %}
+    <h1>Are you sure want to delete  "{{ project.title }}"?</h1>
+    <form method="POST" action="{% url "project_delete" project.pk %}" class="text-center" >
+        {% csrf_token %}
+        <div class="d-flex justify-content-evenly">
+        <p><input type="submit" class="p-3 mb-2 bg-danger text-white" value="Confirm"></p>
+        <p><a href="{% url "project_info" project.pk %}" class="p-3 mb-2 bg-dark text-white" class="p-3" >Cancel</a></p>
+        </div>
+    </form>
+{% endblock %}
