--- a/source/webapp/templates/tracker/delete.html
+++ b/source/webapp/templates/tracker/delete.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Delete Article{% endblock %}
 {% block content %}
-    <h1>Are you sure want to delete  "{{ trecker.short_description }}"?</h1>
+    <h1>Are you sure want to delete  "{{ tracker.short_description }}"?</h1>
     <form method="POST" action="{% url "delete" tracker.pk %}" class="text-center" >
         {% csrf_token %}
         <div class="d-flex justify-content-evenly">
