--- a/source/webapp/templates/tracker/update.html
+++ b/source/webapp/templates/tracker/update.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Create ToDo</h1>
+<h1>Update ToDo</h1>
 
 <form action="" method="post">
 {% include 'partial/form.html'  with button_text='Update' %}
