--- a/source/webapp/templates/project/update.html
+++ b/source/webapp/templates/project/update.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+<h1>Update Project</h1>
+
+<form action="" method="post">
+{% include 'partial/form.html'  with button_text='Update' %}
+</form>
+{% endblock %}
