--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -21,9 +21,23 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'project_index' %}">Home</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'webapp:project_index' %}">Home</a>
         </li>
           {% block menu %}{% endblock %}
+
+      {% if request.user.is_authenticated %}
+           {% block menu_links %}{% endblock %}
+           <li class="nav-item">
+               <a class="nav-link active" href="{% url 'accounts:logout' %}" >Log out</a>
+           </li>
+           <li class="nav-item">
+               <p class="nav-link">Hello, {{ user.username }}!</p>
+           </li>
+       {% else %}
+           <li class="nav-item">
+            <a class="nav-link active" href="{% url 'accounts:login'  %}">Log in</a>
+          </li>
+       {% endif %}
       </ul>
     </div>
   </div>
