--- a/source/webapp/templates/project/index.html
+++ b/source/webapp/templates/project/index.html
@@ -2,9 +2,10 @@
 {% block menu %}
 
 <li class="nav-item">
-    <a class="nav-link active" href="{% url 'project_add' %}">Create</a>
+{% if request.user.is_authenticated %}
+    <a class="nav-link active" href="{% url 'webapp:project_add' %}">Create</a>
 </li>
-
+{% endif %}
 
 {% endblock %}
 
@@ -14,7 +15,7 @@
 
     {% for project in projects %}
         <h2>{{ project.title }})</h2>
-        <h3><a href="{% url 'project_info' project.pk %}">More...</a></h3><br/>
+        <h3><a href="{% url 'webapp:project_info' project.pk %}">More...</a></h3><br/>
         <hr>
     {% endfor %}
 
