--- a/source/webapp/templates/project/info.html
+++ b/source/webapp/templates/project/info.html
@@ -1,14 +1,16 @@
 {% extends 'base.html' %}
 {% block menu %}
+    {% if request.user.is_authenticated %}
     <li class="nav-item">
-      <a class="nav-link active" href="{% url 'project_update' project.pk %}">Update</a>
+      <a class="nav-link active" href="{% url 'webapp:project_update' project.pk %}">Update</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" href="{% url 'add' project.pk %}">Add tracker</a>
+      <a class="nav-link active" href="{% url 'webapp:add' project.pk %}">Add tracker</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" href="{% url 'project_delete' project.pk %}">Delete</a>
+      <a class="nav-link active" href="{% url 'webapp:project_delete' project.pk %}">Delete</a>
     </li>
+    {% endif %}
 {% endblock %}
 {% block content %}
 {% csrf_token %}
@@ -22,9 +24,11 @@
         <hr>
         <h2>{{ pro.short_description }}</h2>
         <br>
-        <a href="{% url 'info' pro.pk%}" class="px-2 fs-1" ><i class="bi bi-info-circle-fill"></i></a>
-        <a href="{% url 'update' pro.pk%}" class="px-2 fs-1"><i class="bi bi-pencil-square"></i></a>
-        <a href="{% url 'delete' pro.pk%}" class="px-2 fs-1"><i class="bi bi-trash-fill"></i></a>
+        {% if request.user.is_authenticated %}
+        <a href="{% url 'webapp:info' pro.pk%}" class="px-2 fs-1" ><i class="bi bi-info-circle-fill"></i></a>
+        <a href="{% url 'webapp:update' pro.pk%}" class="px-2 fs-1"><i class="bi bi-pencil-square"></i></a>
+        <a href="{% url 'webapp:delete' pro.pk%}" class="px-2 fs-1"><i class="bi bi-trash-fill"></i></a>
+        {% endif %}
         {% if not forloop.last %}<br><br> {% endif %}
     <p>{% endfor %}</p>
 {% endblock %}
