--- a/source/webapp/templates/tracker/delete.html
+++ b/source/webapp/templates/tracker/delete.html
@@ -2,11 +2,11 @@
 {% block title %}Delete Article{% endblock %}
 {% block content %}
     <h1>Are you sure want to delete  "{{ tracker.short_description }}"?</h1>
-    <form method="POST" action="{% url "delete" tracker.pk %}" class="text-center" >
+    <form method="POST" action="{% url "webapp:delete" tracker.pk %}" class="text-center" >
         {% csrf_token %}
         <div class="d-flex justify-content-evenly">
         <p><input type="submit" class="p-3 mb-2 bg-danger text-white" value="Confirm"></p>
-        <p><a href="{% url "info" tracker.pk %}" class="p-3 mb-2 bg-dark text-white" class="p-3" >Cancel</a></p>
+        <p><a href="{% url "webapp:info" tracker.pk %}" class="p-3 mb-2 bg-dark text-white" class="p-3" >Cancel</a></p>
         </div>
     </form>
 {% endblock %}
