--- a/source/webapp/templates/project/index.html
+++ b/source/webapp/templates/project/index.html
@@ -7,6 +7,11 @@
 </li>
 {% endif %}
 
+<li class="nav-item me-3 ms-3">
+    {% include 'partial/simple_search.html' %}
+</li>
+
+
 {% endblock %}
 
 {% block content %}
