--- a/source/accounts/templates/user_create.html
+++ b/source/accounts/templates/user_create.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
+<h1>Registration</h1>
 
-</body>
-</html>
+<form action="" method="post">
+{% include 'partial/form.html'  with button_text='Sign up' %}
+</form>
+{% endblock %}
+
