--- a/source/webapp/templates/tracker/info.html
+++ b/source/webapp/templates/tracker/info.html
@@ -5,10 +5,10 @@
       <a class="nav-link active" href="{% url 'webapp:add' tracker.projects_fk.pk %}">Create</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" href="{% url 'webapp:update' tracker.projects_fk.pk %}">Update</a>
+      <a class="nav-link active" href="{% url 'webapp:update' tracker.pk %}">Update</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" href="{% url 'webapp:delete' tracker.projects_fk.pk %}">Delete</a>
+      <a class="nav-link active" href="{% url 'webapp:delete' tracker.pk %}">Delete</a>
     </li>
     {% endif %}
 {% endblock %}
