--- a/source/webapp/templates/project/user_delete.html
+++ b/source/webapp/templates/project/user_delete.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
+<h1>Choose who do you want ot delete</h1>
 
-</body>
-</html>
+<form action="" method="post">
+{% include 'partial/form.html'  with button_text='Delete' %}
+</form>
+{% endblock %}
