--- a/source/webapp/templates/project/index.html
+++ b/source/webapp/templates/project/index.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 {% block menu %}
 
-<li class="nav-item">
-{% if request.user.is_authenticated %}
-    <a class="nav-link active" href="{% url 'webapp:project_add' %}">Create</a>
-</li>
+{% if perms.webapp.add_project %}
+    <li class="nav-item">
+    {% if request.user.is_authenticated %}
+        <a class="nav-link active" href="{% url 'webapp:project_add' %}">Create</a>
+    </li>
+    {% endif %}
 {% endif %}
 
 <li class="nav-item me-3 ms-3">
