--- a/source/webapp/templates/partial/project_list.html
+++ b/source/webapp/templates/partial/project_list.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
+ <h1 class="text-center" >Projects</h1><br/><hr>
+    {% for project in projects %}
+        <h2>{{ project.title }})</h2>
+        <h3><a href="{% url 'webapp:project_info' project.pk %}">More...</a></h3><br/>
+        <hr>
+    {% endfor %}
 
-</body>
-</html>
