--- a/source/webapp/templates/project/index.html
+++ b/source/webapp/templates/project/index.html
@@ -18,16 +18,18 @@
 
 {% block content %}
 
-    <h1 class="text-center" >Projects</h1><br/><hr>
-
-    {% for project in projects %}
-        <h2>{{ project.title }})</h2>
-        <h3><a href="{% url 'webapp:project_info' project.pk %}">More...</a></h3><br/>
-        <hr>
-    {% endfor %}
+{#    <h1 class="text-center" >Projects</h1><br/><hr>#}
+{##}
+{#    {% for project in projects %}#}
+{#        <h2>{{ project.title }})</h2>#}
+{#        <h3><a href="{% url 'webapp:project_info' project.pk %}">More...</a></h3><br/>#}
+{#        <hr>#}
+{#    {% endfor %}#}
+    {% include 'partial/project_list.html' %}
 
     {% if is_paginated %}
         {% include 'partial/pagination.html' %}
     {% endif %}
+
 
 {% endblock %}
